[tool.poetry]
name = "csst.csst_analyzer"
version = "0.1.0"
description = ""
authors = ["Joe Kern <jkern34@gatech.edu>", "Mona Amrihesari <mamrihesari3@gatech.edu>"]
readme = "README.md"
packages = [{include = "csst"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"
numpy = "^1.23.2"
seaborn = "^0.12.0"
matplotlib = "^3.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
